--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,27 @@
     height: 100vh;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 0;
-    grid-template-areas: "nav" "header" "main"  "footer";
+    background-image: url("../img/marilyn-manson.jpg");
+    background-position: bottom;
+    display: grid;
+    width: 100%;
+    height: 100vh;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 0;
+    grid-template-areas: "nav"  "main"  "footer";
     /*	background-image: map-get($map: $paletadefondos,$key:'uno');*/ }
-    .contenedorgrid main h1 {
-      margin-top: 8rem; }
+    .contenedorgrid footer {
+      display: flex;
+      align-content: flex-end;
+      align-item: center;
+      background: none; }
+    .contenedorgrid h5 {
+      color: black; }
+    .contenedorgrid article img {
+      background-color: rgba(31, 33, 36, 0.4);
+      border-radius: 2px; }
+      .contenedorgrid article img:hover {
+        background-color: rgba(255, 255, 255, 0.8); }
   .contenedorgriddisco {
     display: grid;
     width: 100%;
@@ -65,9 +82,9 @@
     width: 100%;
     height: 100vh;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 7px;
+    grid-gap: 0px;
     grid-template-rows: 7% 80% 10%;
-    grid-template-areas: "nav nav" "header main" "footer footer"; }
+    grid-template-areas: "nav nav" "main main" "footer footer"; }
   .contenedorgriddisco {
     display: grid;
     width: 100%;
@@ -231,6 +248,11 @@ body {
   min-height: 100%;
   background-color: #1f2124; }
 
+p {
+  font-weight: 600;
+  width: 100%;
+  font-size: 1.5rem; }
+
 .ani {
   animation: anima 8s infinite linear alternate; }
 
@@ -277,12 +299,6 @@ main div div a {
     filter: brightness(130%);
     transform: scale(1.2);
     z-index: 1; }
-
-p {
-  text-align: justify;
-  width: 85%;
-  color: #D9DBDE;
-  font-size: 1.5rem; }
 
 h1 {
   font-weight: 500;
@@ -519,13 +535,9 @@ table {
   background-color: #030205FF; }
 
 .imgm {
-  width: 80%;
-  height: 70%;
-  border-radius: 35px;
-  margin-bottom: 8rem;
-  border-width: .5rem;
-  border: solid;
-  color: #D9DBDE; }
+  width: 100vw;
+  height: auto;
+  border-radius: 5px; }
 
 .contenedor_contactos-fondo {
   margin: 1rem;
@@ -577,3 +589,9 @@ table {
   border-image: 44px;
   border-radius: 10px;
   padding: 1rem; }
+
+.cajaa {
+  width: 50%;
+  box-shadow: 0 0 8px #30394f, 0 0 16px #30394f, 0 0 24px #30394f;
+  background-color: rgba(0, 0, 4, 0.9);
+  border-radius: 13px; }
