--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -2,12 +2,30 @@
 		@media(min-width:100px) 
 			{
 			.contenedorgrid {
-					main h1{
-			margin-top:8rem;
+				@include grid (grid,100%, 100vh, 1, 0);	
+			background-image:url("../img/marilyn-manson.jpg");
+			background-position:bottom;
+		footer {
+			display: flex;
+			align-content: flex-end;
+			align-item:center;
+			background: none;
+
+			}
+			h5{
+				color: black;
+			}
+			article img {
+			    background-color: rgba(31, 33, 36, .4);
+			    border-radius: 2px;
+			    &:hover {
+				background-color: rgba(255, 255, 255, .8);
+			}
+
 		}
 				@include grid (grid,100%, 100vh, 1, 0);	
 					grid-template-areas:
-					"nav" "header" "main" 
+					"nav"  "main" 
 					"footer";
 				/*	background-image: map-get($map: $paletadefondos,$key:'uno');*/
 				
@@ -63,11 +81,11 @@
 	
 			}
 		.contenedorgrid {
-			@include grid (grid,100%, 100vh, 2, 7px);		
-		grid-template-rows:7% 80% 10% ;
+			@include grid (grid,100%, 100vh, 2, 0px);		
+		grid-template-rows:7% 80% 10%;
 		grid-template-areas:
 
-		"nav nav" "header main" "footer footer";		
+		"nav nav" "main main" "footer footer";		
 		}
 		//DISCOGRAFIA//
 		.contenedorgriddisco{
