--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,13 @@ html {
 }
 
 body {min-height: 100%; 
+
 	background-color:#1f2124;
+}
+p {
+	font-weight: 600;
+	width: 100%;
+	font-size: 1.5rem;
 }
 //fondo de galeria y discografia//
 
@@ -82,11 +88,6 @@ main div div a{
 					}
 		}
 
-p { text-align: justify;
-	width: 85%;
-	color: map-get($map: $paletadecolor,$key:'dos');
-	font-size: $letra__media;
-}
 h1{
 font-weight:500;
 	background: linear-gradient(to right, #22bdc3,#4f2dfd, $color__blanco);
@@ -319,13 +320,10 @@ table {margin-top:2rem;
 	background-color: #030205FF;
 }
 .imgm{
-	width: 80%;
-	height: 70%;
-	border-radius: 35px;
-margin-bottom:8rem;
-	border-width:.5rem;
-	border:solid;
-	color:$color__blanco;
+	width:100vw;
+	height: auto
+	;
+	border-radius:5px;
 }
 .contenedor_contactos-fondo{
 	margin:1rem;
@@ -394,3 +392,12 @@ margin-bottom:8rem;
 		border-radius : 10px;
 		padding:1rem;
 }
+
+.cajaa{
+	width: 50%;
+box-shadow: 0 0 8px rgba(48, 57, 79, 1.0), 
+			0 0 16px rgba(48, 57, 79, 1.0), 0 0 24px rgba(48, 57, 79, 1.0);
+background-color:rgba(0, 0, 4, .9) ;
+border-radius: 13px;
+}
+
