--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,94 +1,102 @@
 
-		@media(min-width:100px) 
-			{
-			.contenedorgrid {
-				@include grid (grid,100%, 100vh, 1, 0);	
-			background-image:url("../img/marilyn-manson.jpg");
-			background-position:bottom;
+@media(min-width:1px) 
+{
+	.contenedor__grid {
+		@include grid (grid,100%, 100vh, 1, 0);
+		grid-template-rows:7% 80% 10%;	
+		background-image:url("../img/marilyn-manson.jpg");
+		background-position:bottom;
+		background-size: cover;
 		footer {
 			display: flex;
 			align-content: flex-end;
 			align-item:center;
 			background: none;
 
-			}
+			
 			h5{
 				color: black;
 			}
 			article img {
-			    background-color: rgba(31, 33, 36, .4);
-			    border-radius: 2px;
-			    &:hover {
-				background-color: rgba(255, 255, 255, .8);
-			}
-
-		}
-				@include grid (grid,100%, 100vh, 1, 0);	
-					grid-template-areas:
-					"nav"  "main" 
-					"footer";
-				/*	background-image: map-get($map: $paletadefondos,$key:'uno');*/
-				
-			 }
-	//discografia//
-			.contenedorgriddisco{
-				@include grid (grid,100%, 100vh, 1, 0);	
-					grid-template-areas:
-					"nav" "header" "main" "footer";
-					/*background-image: map-get($map: $paletadefondos,$key:'dos');*/
-			}
-	//galeria//
-			.contenedorgridgaleria{
-				@include grid (grid,100%, 100vh, 1, 0);	
-					grid-template-areas:
-					"nav" "header" "main" "footer";
-			}
-	//TOUR//
-			.contenedorgridtour{
-				@include grid (grid,100%, 100vh, 1, 0);	
-					grid-template-areas:
-					"nav" "header" "main" "footer";
-			}
-	//CONTACTO//
-			.contenedorgridcont{
-				@include grid (grid,100%, 100vh, 1, 0);	
-					grid-template-areas:
-					"nav" "header" "main" "footer";
-				/*	background-image: map-get($map: $paletadefondos,$key:'tres');*/
-			}
-				#form {
-					display: flex !important;
-					margin-top: 0;
-					flex-direction: column;
-					justify-content: center;
-					width: 80%;
+				background-color: rgba(31, 33, 36, .4);
+				border-radius: 2px;
+				&:hover {
+					background-color: rgba(255, 255, 255, .8);
 				}
+			}
+		}
+		@include grid (grid,100%, 100vh, 1, 0);	
+		grid-template-areas:
+		"nav"  "main" 
+		"footer";
+		/*	background-image: map-get($map: $paletadefondos,$key:'uno');*/
+		
+	}
+	//discografia//
+	.contenedor__grid--disco{
+		@include grid (grid,100%, 100vh, 1, 0);	
+		grid-template-areas:
+		"nav" "header" "main" "footer";
+		/*background-image: map-get($map: $paletadefondos,$key:'dos');*/
+	}
+	//galeria//
+	.contenedor__grid--galeria{
+		@include grid (grid,100%, 100vh, 1, 0);	
+		grid-template-areas:
+		"nav" "header" "main" "footer";
+		main{
+			div{
+				div{
+					background-color:black;
+				}
+			}
+		}
+	}
+	//TOUR//
+	.contenedor__grid--tour{
+		@include grid (grid,100%, 100vh, 1, 0);	
+		grid-template-areas:
+		"nav" "header" "main" "footer";
+	}
+	//CONTACTO//
+	.contenedor__grid--contactos{
+		@include grid (grid,100%, 100vh, 1, 0);	
+		grid-template-areas:
+		"nav" "header" "main" "footer";
+		/*	background-image: map-get($map: $paletadefondos,$key:'tres');*/
+	}
+	#form {
+		display: flex !important;
+		margin-top: 0;
+		flex-direction: column;
+		justify-content: center;
+		width: 80%;
+	}
 }
 /*media queries 768 HOME*/
 @media(min-width: 768px) 
-           
-	{ 
-		.navbar{
-		height: 8vh;
-		padding-top: 1.5rem;
-			
-	}
-		nav div ul li {
-				display: inline-block;
-				align-content: center;
-				justify-content: center;
-				alignment-baseline: central;
-	
-			}
-		.contenedorgrid {
-			@include grid (grid,100%, 100vh, 2, 0px);		
-		grid-template-rows:7% 80% 10%;
-		grid-template-areas:
 
-		"nav nav" "main main" "footer footer";		
-		}
+{ 
+	.navbar{
+		height: 9vh;
+		padding-top: 1.5rem;
+		
+	}
+	nav div ul li {
+		display: inline-block;
+		align-content: center;
+		justify-content: center;
+		alignment-baseline: central;
+		
+	}
+	.contenedor__grid {
+		@include grid (grid,100%, 100vh, 1, 0px);	
+		.caja__textomain{
+			width: 37%;
+		}	
+	}
 		//DISCOGRAFIA//
-		.contenedorgriddisco{
+		.contenedor__grid--disco{
 			@include grid (grid,100%, 100vh, 3, 7px);
 			grid-template-areas: 
 			"nav nav nav" "header header header"
@@ -98,29 +106,29 @@
 			@include flex (flex, space-around, center , center ,columns, wrap);
 		}
 		//GALERIA/
-		.contenedorgridgaleria{
+		.contenedor__grid--galeria{
 			@include grid (grid,100%, 100vh, 4, 7px);
 			grid-template-areas:
 			"nav nav nav nav" "header header header header"
 			"main main main main" "footer footer footer footer";	
-		
-		}
 			
-		//TOUR//
-		.contenedorgridtour{
-			@include grid (grid,100%, 100vh, 2,7px );
-		grid-template-rows:7% auto 10% ;
-		grid-template-areas: 
-		"nav nav " 
-		" main header"
-		"footer footer";
-		main h1{
-			margin-top:6rem;
 		}
+		
+		//TOUR//
+		.contenedor__grid--tour{
+			@include grid (grid,100%, 100vh, 2,7px );
+			grid-template-rows:7% auto 10% ;
+			grid-template-areas: 
+			"nav nav " 
+			" main header"
+			"footer footer";
+			h1{
+				margin-top:8rem;
+			}
 
-	}
+		}
 	//CONTACTO//
-	.contenedorgridcont{
+	.contenedor__grid--contactos{
 		@include grid (grid,100%, 100vh, 2, 7px);
 		grid-template-areas: 
 		"nav nav " "header header" 
@@ -131,37 +139,37 @@
 /*media queries 1024 HOME*/
 @media(min-width: 1024px) 
 {
-	.contenedorgrid {
+	.contenedor__grid {
 	}
 //CONTACTS//
-		.contenedorgridcont{
-				@include grid (grid,100%, 100vh, 2, 9px);
-				grid-template-areas: 
-				"nav nav"
-				"header header"
-				"main main"
-				"footer footer";
-			}
+.contenedor__grid--contactos{
+	@include grid (grid,100%, 100vh, 2, 9px);
+	grid-template-areas: 
+	"nav nav"
+	"header header"
+	"main main"
+	"footer footer";
+}
 			//TOUR//
-			.contenedorgridtour{
+			.contenedor__grid--tour{
 				grid-template-areas: 
-		"nav nav " "main header" 
-		"footer footer";
+				"nav nav " "main header" 
+				"footer footer";
 				grid-gap:5px;
 			}
 			//GALERIA//		
-		.contenedorgridgaleria{
-			grid-template-columns:repeat(4, 1fr);
-			grid-template-areas: 
-			"nav nav nav nav"
-			"header header header header"
-			"main main main main"
-			"footer footer footer footer";
+			.contenedor__grid--galeria{
+				grid-template-columns:repeat(4, 1fr);
+				grid-template-areas: 
+				"nav nav nav nav"
+				"header header header header"
+				"main main main main"
+				"footer footer footer footer";
 
-		}
-		
+			}
+			
 		//discografia//
-		.contenedorgriddisco{
+		.contenedor__grid--disco{
 			grid-template-columns:repeat(3, 1fr);
 			grid-template-areas: 
 			"nav nav nav"
@@ -169,7 +177,7 @@
 			"main main main"
 			"footer footer footer footer";
 		}
-}
+	}
 
 
-		
+	
