--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -4,22 +4,19 @@
 	.contenedor__grid {
 		@include grid (grid,100%, 100vh, 1, 0);
 		grid-template-rows:7% 80% 10%;	
-		background-image:url("../img/marilyn-manson.jpg");
-		background-position:bottom;
+		background-image:url("../img/pesa.jpg");
 		background-size: cover;
+
 		footer {
 			display: flex;
 			align-content: flex-end;
 			align-item:center;
 			background: none;
 
-			
-			h5{
-				color: black;
-			}
+
 			article img {
-				background-color: rgba(31, 33, 36, .4);
-				border-radius: 2px;
+				background-color: rgba(255, 255, 255, .4);
+				border-radius: 5px;
 				&:hover {
 					background-color: rgba(255, 255, 255, .8);
 				}
@@ -91,9 +88,6 @@
 	}
 	.contenedor__grid {
 		@include grid (grid,100%, 100vh, 1, 0px);	
-		.caja__textomain{
-			width: 37%;
-		}	
 	}
 		//DISCOGRAFIA//
 		.contenedor__grid--disco{
