--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,8 @@ textarea {
   margin-left: 1rem;
   margin-right: 1rem;
   resize: none;
-  background-color: #A5C1CEFF; }
+  background-color: #A5C1CEFF;
+  border-radius: 10px; }
 
 label {
   font-size: 1.5rem;
@@ -384,13 +385,16 @@ label {
   margin-left: 18px; }
 
 input {
-  border-radius: 4px;
+  border-radius: 10px;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
   margin-left: 1rem;
   margin-right: 1rem;
   background-color: #A5C1CEFF; }
 
 select {
-  background-color: #A5C1CEFF; }
+  background-color: #A5C1CEFF;
+  border-radius: 10px; }
 
 table {
   margin-top: 2rem;
@@ -475,7 +479,7 @@ table {
   font-size: 1.4rem;
   text-decoration: none;
   height: 3rem;
-  width: 7Rem;
+  width: 8rem;
   background-color: rgba(48, 57, 79, 0.8);
   font-weight: bold;
   margin-left: 1rem;
