--- a/scss/main.scss
+++ b/scss/main.scss
@@ -96,6 +96,7 @@ header img{
 		margin-right: 1rem;
 		resize: none;
 		background-color:map-get($map: $paletadecolor,$key:'cuatro');
+		border-radius:10px;
 	}
 	label {
 		font-size: $letra__media;
@@ -104,7 +105,9 @@ header img{
 		margin-left: 18px;
 	}
 	input {
-		border-radius:4px;
+		border-radius:10px;
+		padding-left:0.8rem;
+		padding-right:0.8rem;
 		margin-left: 1rem;
 		margin-right: 1rem;
 		background-color:map-get($map: $paletadecolor,$key:'cuatro');
@@ -112,6 +115,7 @@ header img{
 
 	select {
 		background-color:map-get($map: $paletadecolor,$key:'cuatro');
+		border-radius:10px;
 	}
 
 	table {
@@ -197,7 +201,7 @@ header img{
 	font-size: 1.4rem;
 	text-decoration: none;
 	height: 3rem;
-	width: 7Rem;
+	width: 8rem;
 	background-color:map-get($map: $paletadecolor,$key:'tres');
 	font-weight: bold;
 	margin-left: 1rem;
