--- a/scss/main.scss
+++ b/scss/main.scss
@@ -73,7 +73,7 @@ header img{
 
 	h1{
 		font-weight:500;
-		background: linear-gradient(to right, #22bdc3,#4f2dfd, $color__blanco);
+		background: linear-gradient(to right,white, #ECECE8, #5E5E5EFF,#5E5E5EFF,$color__blanco, white);
 		-webkit-background-clip:text;
 		background-clip:text;
 		-webkit-text-fill-color: transparent;
@@ -124,6 +124,7 @@ header img{
 		max-width: 800px;
 		background-image: linear-gradient(135deg, rgb(48, 57, 79), rgb(48, 57, 89), rgb(48, 57, 95));
 		background-size: 500%;
+		
 		animation: anima 8s infinite;
 		td{
 			font-size: $letra__chica;
@@ -284,7 +285,7 @@ header img{
 	box-shadow: 0 0 8px rgba(48, 57, 79, 1.0), 
 	0 0 16px rgba(48, 57, 79, 1.0), 0 0 24px rgba(48, 57, 79, 1.0);
 	border-radius: 8px;
-	background-color:rgba(0, 0, 0, 0.9);
+	background-color:rgba(0, 0, 0, 0.6);
 	border-color: black;
 	border:solid;
 }
@@ -320,8 +321,8 @@ header img{
 	position: absolute;
 	left: 0px;
 	top: 0px;
-	background: linear-gradient(124deg, #79fb00, #8d01a0, #031ba5,#ff004c,  
-		#e6036d, #fb0094,#ff6600, #04c2e4,#adad02, #00c3ff);
+	background: linear-gradient(120deg,#757575FF, black,#E8E8E8FF, #00022DFF,#041E00FF,  
+		#13002DFF);
 	background-size: 300%;
 	width: calc(100% );
 	height: calc(100%);
